# VBT

./: .env.example  Cargo.toml  README.en.md  README.md  date_cache.json  rss.json  watchlist.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: book-request.md
.github/workflows/: ci.yml  daily.yml  nextjs.yml
.zed/: tasks.json
crates/rss/: Cargo.toml
crates/vbt/: Cargo.toml
crates/vbt/examples/: discord_wh.rs
crates/vbt/src/: lib.rs  main.rs
crates/vbt/src/config/: flag.rs
crates/vbt/src/discord/: mod.rs  send.rs  wh.rs
crates/vbt/src/file_ops/: json_ops.rs  mod.rs  rss_ops.rs
crates/vbt/src/json/: mod.rs  return_json.rs
crates/vbt/src/requests/: get_data.rs
crates/vbt/src/services/: watchlist.rs
crates/vbt/src/types/: book.rs  error.rs  mod.rs  watchlist.rs
crates/vbt/src/utils/: cache.rs  fs.rs  mod.rs  time.rs  url.rs
feed/json/: 86__Eighty_Six.json  Honzuki_no_Gekokujou__Ryoushu_no_Youjo.json  Inori_no_Kuni_no_Riviere.json  Kumo_desu_ga,_Nani_ka.json  Kusuriya_no_Hitorigoto.json  Majo_no_Tabitabi.json  Oobaa_Roodo.json  Otome_Game_no_Heroine_de_Saikyou_Survive.json  Shokei_Shoujo_no_Virgin_Road.json  Shokei_Shoujo_no_Virgin_Road:_Soshite,_Kanojo_wa_Yomigaeru.json  Slime_Taoshite_300-nen,_Shiranai_Uchi_ni_Level_MAX_ni_Nattemashita.json  Watashi_wo_Tabetai,_Hitodenashi.json  Youjo_Senki.json
feed/rss/: 86__Eighty_Six.rss  Honzuki_no_Gekokujou__Ryoushu_no_Youjo.rss  Inori_no_Kuni_no_Riviere.rss  Kumo_desu_ga,_Nani_ka.rss  Kusuriya_no_Hitorigoto.rss  Majo_no_Tabitabi.rss  (+7 more)
pages/: bun.lockb  next.config.ts  package.json
(+5 files in other folders)
